--- a/libnao/libnao.vcxproj
+++ b/libnao/libnao.vcxproj
@@ -106,6 +106,12 @@
       <TreatLinkerWarningAsErrors>true</TreatLinkerWarningAsErrors>
       <ImportLibrary>$(OutDir)lib\$(TargetName).lib</ImportLibrary>
     </Link>
+    <ResourceCompile>
+      <AdditionalIncludeDirectories>$(ProjectDir)include;$(ProjectDir)</AdditionalIncludeDirectories>
+    </ResourceCompile>
+    <Manifest>
+      <AdditionalManifestFiles>libnao.dll.manifest</AdditionalManifestFiles>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -170,6 +176,12 @@
       <TreatLinkerWarningAsErrors>true</TreatLinkerWarningAsErrors>
       <ImportLibrary>$(OutDir)lib\$(TargetName).lib</ImportLibrary>
     </Link>
+    <ResourceCompile>
+      <AdditionalIncludeDirectories>$(ProjectDir)include;$(ProjectDir)</AdditionalIncludeDirectories>
+    </ResourceCompile>
+    <Manifest>
+      <AdditionalManifestFiles>libnao.dll.manifest</AdditionalManifestFiles>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Containers\NaoBytes.cpp" />
@@ -184,6 +196,7 @@
     <ClCompile Include="src\NaoObject.cpp" />
     <ClCompile Include="src\Plugin\NaoPlugin.cpp" />
     <ClCompile Include="src\Plugin\NaoPluginManager.cpp" />
+    <ClCompile Include="src\UI\NProgressDialog.cpp" />
     <ClCompile Include="src\Utils\DesktopUtils.cpp" />
     <ClCompile Include="src\Utils\SteamUtils.cpp" />
   </ItemGroup>
@@ -200,16 +213,26 @@
     <ClInclude Include="include\IO\NaoIO.h" />
     <ClInclude Include="include\IO\NaoMemoryIO.h" />
     <ClInclude Include="include\libnao.h" />
+    <ClInclude Include="include\libnao_resource.h" />
     <ClInclude Include="include\Logging\NaoLogging.h" />
     <ClInclude Include="include\NaoObject.h" />
     <ClInclude Include="include\Plugin\NaoPlugin.h" />
     <ClInclude Include="include\Plugin\NaoPluginManager.h" />
+    <ClInclude Include="include\UI\NProgressDialog.h" />
     <ClInclude Include="include\Utils\DesktopUtils.h" />
     <ClInclude Include="include\Utils\SteamUtils.h" />
     <ClInclude Include="include\Utils\vdf_parser.hpp" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="resource\resource.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="libnao.licenseheader" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="resource\libnao.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="libnao.dll.manifest" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
