--- a/libnao/libnao.vcxproj
+++ b/libnao/libnao.vcxproj
@@ -196,6 +196,8 @@
     <ClCompile Include="src\NaoObject.cpp" />
     <ClCompile Include="src\Plugin\NaoPlugin.cpp" />
     <ClCompile Include="src\Plugin\NaoPluginManager.cpp" />
+    <ClCompile Include="src\UI\NaoUIManager.cpp" />
+    <ClCompile Include="src\UI\NaoWidget.cpp" />
     <ClCompile Include="src\UI\NProgressDialog.cpp" />
     <ClCompile Include="src\Utils\DesktopUtils.cpp" />
     <ClCompile Include="src\Utils\SteamUtils.cpp" />
@@ -218,6 +220,8 @@
     <ClInclude Include="include\NaoObject.h" />
     <ClInclude Include="include\Plugin\NaoPlugin.h" />
     <ClInclude Include="include\Plugin\NaoPluginManager.h" />
+    <ClInclude Include="include\UI\NaoUIManager.h" />
+    <ClInclude Include="include\UI\NaoWidget.h" />
     <ClInclude Include="include\UI\NProgressDialog.h" />
     <ClInclude Include="include\Utils\DesktopUtils.h" />
     <ClInclude Include="include\Utils\SteamUtils.h" />
