--- a/Plugin_DAT/Plugin_DAT.vcxproj.filters
+++ b/Plugin_DAT/Plugin_DAT.vcxproj.filters
@@ -26,4 +26,7 @@
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\libnao\libnao.licenseheader" />
+  </ItemGroup>
 </Project>
