--- a/Plugin_DiskDirectory/Plugin_DiskDirectory.vcxproj
+++ b/Plugin_DiskDirectory/Plugin_DiskDirectory.vcxproj
@@ -26,6 +26,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\libnao\libnao.licenseheader" />
+    <None Include="cpp.hint" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
