--- a/Plugin_DiskDirectory/Plugin_DiskDirectory.vcxproj.filters
+++ b/Plugin_DiskDirectory/Plugin_DiskDirectory.vcxproj.filters
@@ -22,5 +22,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\libnao\libnao.licenseheader" />
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
