Partially re-implemented DAT plugin with new API

--- a/Plugin_DAT/Plugin_DAT.vcxproj
+++ b/Plugin_DAT/Plugin_DAT.vcxproj
@@ -28,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\libnao\libnao.licenseheader" />
+    <None Include="cpp.hint" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
