--- a/Plugin_DAT/Plugin_DAT.vcxproj.filters
+++ b/Plugin_DAT/Plugin_DAT.vcxproj.filters
@@ -28,5 +28,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\libnao\libnao.licenseheader" />
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
