Begin Plugin_CPK rework

--- a/Plugin_CPK/Plugin_CPK.vcxproj.filters
+++ b/Plugin_CPK/Plugin_CPK.vcxproj.filters
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\libnao\libnao.licenseheader" />
+    <None Include="cpp.hint" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Plugin_CPK.h">
