--- a/Plugin_CPK/Plugin_CPK.vcxproj
+++ b/Plugin_CPK/Plugin_CPK.vcxproj
@@ -26,6 +26,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\libnao\libnao.licenseheader" />
+    <None Include="cpp.hint" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\CPKManager.h" />
